tests/ui/parser/bad-escape-suggest-raw-string.stderr
error: unknown character escape: `[`
  --> $DIR/bad-escape-suggest-raw-string.rs:3:19
   |
LL |     let bad = "ab\[c";
   |                   ^ unknown character escape
   |
   = help: for more information, visit <https://doc.rust-lang.org/reference/tokens.html#literals>
help: if you meant to write a literal backslash (perhaps escaping in a regular expression), consider a raw string literal
   |
LL |     let bad = r"ab\[c";
   |               ~~~~~~~~

error: aborting due to previous error

